Actualizar página con procesos civiles, familiares y penales + formulario Formspree

--- a/index.html
+++ b/index.html
@@ -1,158 +1,378 @@
 <!DOCTYPE html>
+
 <html lang="es">
+
 <head>
+
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>MA Consulting | Consultoría Legal</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
+
     body {
+
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+      background: #f0f0f0;
+
     }
+
     header {
+
       background: #0d1b2a;
+
       color: white;
+
       padding: 1rem 0;
+
     }
+
     .nav-link {
+
       color: white !important;
+
       font-weight: 500;
+
     }
+
     section {
+
       padding: 60px 20px;
+
     }
+
     .form-section {
+
       background: #f8f9fa;
+
       padding: 40px;
+
       border-radius: 10px;
+
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
     }
+
     footer {
+
       background: #0d1b2a;
+
       color: white;
+
       text-align: center;
+
       padding: 20px;
+
       margin-top: 40px;
+
     }
+
+    h3 {
+
+      margin-top: 30px;
+
+    }
+
   </style>
+
 </head>
+
 <body>
 
+
   <!-- NAVBAR -->
+
   <header>
+
     <nav class="navbar navbar-expand-lg container">
+
       <a class="navbar-brand text-white fw-bold" href="#">MA Consulting</a>
+
       <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+
         <span class="navbar-toggler-icon"></span>
+
       </button>
+
       <div class="collapse navbar-collapse" id="menu">
+
         <ul class="navbar-nav ms-auto">
+
           <li class="nav-item"><a class="nav-link" href="#civiles">Procesos Civiles</a></li>
+
           <li class="nav-item"><a class="nav-link" href="#familia">Procesos de Familia</a></li>
+
+          <li class="nav-item"><a class="nav-link" href="#penal">Procesos Penales</a></li>
+
           <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+
         </ul>
+
       </div>
+
     </nav>
+
   </header>
 
+
   <!-- HERO -->
+
   <section class="text-center bg-light">
+
     <div class="container">
+
       <h1 class="fw-bold">Consultoría Legal en Perú</h1>
-      <p class="lead">Asesoría profesional en procesos civiles y de familia. Su caso en manos expertas.</p>
+
+      <p class="lead">Asesoría profesional en procesos civiles, familiares y penales. Su caso en manos expertas.</p>
+
     </div>
+
   </section>
+
 
   <!-- PROCESOS CIVILES -->
+
   <section id="civiles">
+
     <div class="container">
+
       <h2 class="fw-bold text-center mb-4">Procesos Civiles</h2>
+
       <div class="row">
+
         <div class="col-md-6">
+
           <ul>
+
             <li>Proceso de conocimiento</li>
+
             <li>Proceso abreviado</li>
+
             <li>Proceso sumarísimo</li>
+
             <li>Proceso cautelar</li>
+
             <li>Proceso de ejecución</li>
+
             <li>Conciliación</li>
+
             <li>Transacción judicial</li>
+
             <li>Desistimiento / Abandono</li>
+
           </ul>
+
         </div>
+
         <div class="col-md-6">
+
           <ul>
+
             <li>Adopción</li>
+
             <li>Patrimonio familiar</li>
+
             <li>Sucesión intestada</li>
+
             <li>Separación convencional y divorcio ulterior</li>
+
             <li>Unión de hecho</li>
+
             <li>Rectificación de partidas</li>
+
             <li>Inventarios</li>
+
             <li>Recursos: reposición, apelación, casación, queja, consulta</li>
+
           </ul>
+
         </div>
+
       </div>
+
     </div>
+
   </section>
+
 
   <!-- PROCESOS DE FAMILIA -->
+
   <section id="familia" class="bg-light">
+
     <div class="container">
+
       <h2 class="fw-bold text-center mb-4">Procesos de Familia</h2>
+
       <div class="row">
+
         <div class="col-md-6">
+
           <ul>
+
             <li>Pensión alimenticia (hijos, cónyuge, familiares)</li>
+
             <li>Filiación y pruebas genéticas</li>
+
             <li>Patria potestad (ejercicio o terminación)</li>
+
           </ul>
+
         </div>
+
         <div class="col-md-6">
+
           <ul>
+
             <li>Adopción</li>
+
             <li>Separación de cuerpos / divorcio ulterior</li>
+
             <li>Patrimonio familiar</li>
+
             <li>Reconocimiento de unión de hecho</li>
+
           </ul>
+
         </div>
+
       </div>
+
     </div>
+
   </section>
+
+
+  <!-- PROCESOS PENALES -->
+
+  <section id="penal">
+
+    <div class="container">
+
+      <h2 class="fw-bold text-center mb-4">Procesos Penales</h2>
+
+      <div class="row">
+
+        <div class="col-md-6">
+
+          <ul>
+
+            <li>Ordinario / Común: Homicidio, lesiones, robo, hurto, estafa, fraudes, delitos contra la libertad sexual, delitos contra la propiedad, delitos contra la administración pública</li>
+
+            <li>Inmediato: Delitos flagrantes o con pruebas evidentes (hurto, violencia familiar en flagrancia)</li>
+
+            <li>Querella / Acción privada: Injuria, calumnia, difamación</li>
+
+            <li>Función pública: Delitos cometidos por funcionarios o autoridades (cohecho, malversación de fondos, abuso de autoridad)</li>
+
+          </ul>
+
+        </div>
+
+        <div class="col-md-6">
+
+          <ul>
+
+            <li>Seguridad / Inimputables: Personas inimputables; medidas de seguridad: internamiento, tratamiento obligatorio</li>
+
+            <li>Terminación anticipada: Acuerdo con fiscal; reducción de pena</li>
+
+            <li>Colaboración eficaz: Beneficios procesales por cooperación en investigaciones</li>
+
+            <li>Faltas: Infracciones menores, pequeños hurtos, infracciones de tránsito</li>
+
+            <li>Medidas cautelares: Prisión preventiva, comparecencia, prohibición de salida del país, embargo preventivo</li>
+
+            <li>Recursos: Apelación, casación, queja</li>
+
+          </ul>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
 
   <!-- CONTACTO -->
-  <section id="contacto">
+
+  <section id="contacto" class="bg-light">
+
     <div class="container">
+
       <h2 class="fw-bold text-center mb-4">Contáctenos</h2>
+
       <div class="form-section">
-        <form method="POST" action="mailto:tuemail@ejemplo.com" enctype="text/plain">
+
+        <form method="POST" action="https://formspree.io/f/mldlkpwk">
+
           <div class="mb-3">
+
             <label class="form-label">Nombre completo</label>
+
             <input type="text" class="form-control" name="nombre" required>
+
           </div>
+
           <div class="mb-3">
+
             <label class="form-label">Correo electrónico</label>
+
             <input type="email" class="form-control" name="email" required>
+
           </div>
+
           <div class="mb-3">
+
             <label class="form-label">Teléfono</label>
+
             <input type="text" class="form-control" name="telefono">
+
           </div>
+
           <div class="mb-3">
+
             <label class="form-label">Consulta legal</label>
+
             <textarea class="form-control" name="consulta" rows="4" required></textarea>
+
           </div>
+
           <button type="submit" class="btn btn-dark w-100">Enviar consulta</button>
+
         </form>
+
+        <p class="mt-3 text-center text-success">Nos contactaremos para absolver su consulta, completamente gratis.</p>
+
       </div>
+
     </div>
+
   </section>
 
+
   <footer>
+
     <p>&copy; 2025 MA Consulting - Consultoría Legal en Perú</p>
+
   </footer>
 
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
+
+
+
+
+
+
 
